add package setup for pip

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 # replace with your username:
-name = module_name
-version = attr: blutils.__version__
-author = 'Some One, Someone Else'
-author_email = 'someone@example.com, someoneelse@example.com'
-description = 'Description of this CLI toole'
+name = nftest
+version = attr: nftest.__version__
+author = 'Chenghao Zhu'
+author_email = 'ChenghaoZhu@mednet.ucla.edu'
+description = 'CLI testing tool for Nextflow'
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = 
+url =
 project_urls =
     Bug Tracker =
 classifiers =
@@ -19,13 +19,14 @@ classifiers =
 package_dir =
     = .
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.8
 
 install_requires =
+    PyYAML
 
 [options.packages.find]
 where = .
 
 [options.entry_points]
 console_scripts =
-    tool_name = module_name.__main__:main
+    nftest = nftest.__main__:main
