--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,8 +1,8 @@
 ---
-Category: ''  # shoule be one of docker/pipeline/project/template/tool/training/users
-Description: ''  # Description of why the repository exists
-Maintainers: ['someone@example.com', 'someoneelse@example.com']  # email address of maintainers
-Contributors: 'Xavier Hernandez'  # Full names of contributors
-Languages: ['python']  # programming languages used
-Dependencies: ''  # packages, tools that repo needs to run
-References: ''  # is the tool/dependencies published, is there a confluence page
+Category: 'tool'
+Description: 'CLI testing tool for Nextflow pipelines'
+Maintainers: ['ChenghaoZhu@mednet.ucla.edu']
+Contributors: 'Chenghao Zhu'
+Languages: ['python']
+Dependencies: 'PyYamle'
+References: ''
