let CICD to use the .pylintrc

--- a/.github/workflows/CICD-base.yaml
+++ b/.github/workflows/CICD-base.yaml
@@ -22,3 +22,5 @@ jobs:
       # Run CICD-base
       - name: CICD-base
         uses: docker://blcdsdockerregistry/cicd-base:latest
+        env:
+          PYTHON_PYLINT_CONFIG_FILE: true
