feat (init): adding a cli command init to create an empty nftest yaml and a global.config file

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,9 @@ install_requires =
 [options.packages.find]
 where = .
 
+[options.package_data]
+nftest = data/*
+
 [options.entry_points]
 console_scripts =
     nftest = nftest.__main__:main
