Add dependencies to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,8 @@ python_requires = >=3.8
 install_requires =
     PyYAML
     python-dotenv
+    pytest
+    mock
 
 [options.packages.find]
 where = .
