--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -20,9 +20,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install -r requirements.txt
       - name: Test with pytest
         run: |
+          pip install pytest pytest-cov
           pytest test \
             --doctest-modules \
             --junitxml=junit/test-results.xml \
