--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -23,10 +23,15 @@ jobs:
           pip install -r requirements.txt
       - name: Test with pytest
         run: |
-          pip install pytest pytest-cov
+          pip install pytest
           pytest test \
             --doctest-modules \
-            --junitxml=junit/test-results.xml \
-            --cov=com \
-            --cov-report=xml \
-            --cov-report=html
+            --junitxml=junit/test-results.xml
+      - name: Upload pytest test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results.xml
+          path: junit/test-results.xml
+        # Use always() to always run this step to publish test results when
+        # there are test failures
+        if: ${{ always() }}
