--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -20,10 +20,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install .
       - name: Test with pytest
         run: |
-          pip install pytest
           pytest test \
             --doctest-modules \
             --junitxml=junit/test-results.xml
