--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -31,6 +31,7 @@ jobs:
         with:
           name: test-results.xml
           path: junit/test-results.xml
+          if-no-files-found: error
         # Use always() to always run this step to publish test results when
         # there are test failures
         if: ${{ always() }}
