--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -1,37 +1,41 @@
 ---
-name: pytest
+name: Run PyTest
 
 on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
 
-    timeout-minutes: 15
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version:
+          - "3.8"
+          - "3.12"
 
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.8'
-      - name: Install dependencies
+          python-version: ${{ matrix.python-version }}
+
+      - name: Run tests
         run: |
-          python -m pip install --upgrade pip
-          pip install .
-      - name: Test with pytest
-        run: |
-          pytest test \
-            --doctest-modules \
-            --junitxml=junit/test-results.xml
+          pip install tox
+          tox -e py${{matrix.python-version}}
+
       - name: Upload pytest test results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
+        if: success() || failure()
         with:
-          name: test-results.xml
+          name: "pytest-${{ matrix.python-version }}.xml"
           path: junit/test-results.xml
           if-no-files-found: error
-        # Use always() to always run this step to publish test results when
-        # there are test failures
-        if: ${{ always() }}
