Fix hatch-vcs by ignoring alias tags

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ package-data = { "nftest" = ["data/*"] }
 [tool.hatch.version]
 source = "vcs"
 
+[tool.hatch.version.raw-options]
+git_describe_command = "git describe --dirty --tags --long --match 'v[0-9]*.[0-9]*.[0-9]*'"
+
 [tool.hatch.build.hooks.vcs]
 version-file = "nftest/_version.py"
 
